--- a/frontend/src/app/components/projects/projects.html
+++ b/frontend/src/app/components/projects/projects.html
@@ -17,9 +17,6 @@
     <div *ngIf="!loading && projects.length > 0" class="row">
       <div *ngFor="let project of projects" class="col-12 mb-4">
         <div class="project-card">
-          <div class="project-image">
-            <img [src]="getProjectImage(project)" (error)="handleImgError($event, project)" alt="{{ project.name }} image" loading="lazy" />
-          </div>
           <div class="card-header">
             <div class="project-info">
               <h3 class="project-title">{{ project.name }}</h3>
@@ -47,25 +44,30 @@
             </div>
           </div>
           <div class="card-body">
-            <p class="description">{{ project.description }}</p>
-            
-            <div class="project-details">
-              <div *ngIf="project.features && project.features.length > 0" class="features">
-                <h5>Key Features:</h5>
-                <ul>
-                  <li *ngFor="let feature of project.features">
-                    {{ feature }}
-                  </li>
-                </ul>
-              </div>
-
-              <div *ngIf="project.technologies" class="technologies">
-                <h5>Technologies Used:</h5>
-                <div class="tech-tags">
-                  <span *ngFor="let tech of project.technologies.split(',')" class="tech-tag">
-                    {{ tech.trim() }}
-                  </span>
+            <div class="body-layout">
+              <div class="body-text">
+                <p class="description">{{ project.description }}</p>
+                <div class="project-details">
+                  <div *ngIf="project.features && project.features.length > 0" class="features">
+                    <h5>Key Features:</h5>
+                    <ul>
+                      <li *ngFor="let feature of project.features">
+                        {{ feature }}
+                      </li>
+                    </ul>
+                  </div>
+                  <div *ngIf="project.technologies" class="technologies">
+                    <h5>Technologies Used:</h5>
+                    <div class="tech-tags">
+                      <span *ngFor="let tech of project.technologies.split(',')" class="tech-tag">
+                        {{ tech.trim() }}
+                      </span>
+                    </div>
+                  </div>
                 </div>
+              </div>
+              <div class="body-media">
+                <img [src]="getProjectImage(project)" (error)="handleImgError($event, project)" alt="{{ project.name }} image" loading="lazy" />
               </div>
             </div>
           </div>
